--- a/about.html
+++ b/about.html
@@ -8,9 +8,10 @@ multilingual: true
 
 {% include multilingual-sel.html %}
 
+<!-- SHOULD_UPDATE -->
 <!-- Chinese Version -->
 <div class="zh post-container">
-    {% capture about_zh %}{% include about/zh.md %}{% endcapture %}
+    {% capture about_zh %}{% include about/kr.md %}{% endcapture %}
     {{ about_zh | markdownify }}
 </div>
 
