--- a/offline.html
+++ b/offline.html
@@ -2,7 +2,7 @@
 layout: default
 title: Offline
 hide-in-nav: true
-description: "阅读过的页面可以在离线时访问哦 ;)"
+description: "오프라인에서만 볼 수 있는 페이지입니다. ;)"
 header-img: "img/404-bg.jpg"
 permalink: /offline.html
 ---
